v0.4.0
- Updated for QAPI v0.8.0 support
- Meta labels & comments now use iotic specific properties
- Support for "recent data" feature
- Removed IOT.DB feature (superseded by "recent data")
- Removed IOT.Client.close (was previously deprecated)

v0.3.2
- Remote point instances now include entity LID to which subscription applies
- Start processing callbacks only after QAPI ping has completed
- Return resource guids without dashes (to be in line with request
  responses which have no dashes for them). Dashed guids can still be
  provided as input to methods.
- Added ThingRunner class to ease running of agent code (optionally in
  background thread).
- Added feed/control data template generator (from metadata)
  Provides additional callbacks to filter only data which conforms to its
  value description.
- Return True on control tell success (string on failure)
- Added check to prevent sharing attempt with Controls
- Allow CRUD callbacks not to be serialised (so as to allow for
  additional QAPI requests after e.g. receiving a sub-created callback)
- Added subscribed (i.e. new subscription to own thing) calback
- Fix unsolicited resource logging exception
- Allow for easy profiling of agent threads (include user's own)
- Correction to default throttling limits
- Log (warn) long throttling waits

v0.3.1
- Request sending reliability improvements (on network failure)
- Allow for underlying socket timeout to be configured
- Synchronous requests now also time out on lack of response (not just send failure)
- Removed redundant seqnum & lowseq_resend parameters (Core.Client)
- Print version information on info logging level
- Minor documentation updates
- Minor resource class validation & consistency updates

v0.3.0
- Updated for QAPI v0.7.0 support
- Removed unnecessary returns from ResourceMeta
- IOT.Client.describe() now has optional language parameter - results only
  contain items in chosen language (apart from for Values)