@@ -6,7 +6,7 @@ exclude = src/IoticAgent/third/amqp
 # select errors and warnings to enable which are off by default
 # select =
 # skip errors or warnings
-#ignore =
+ignore = E402
 # set maximum allowed line length default: 79
 max-line-length = 120
 # set the error format
