@@ -22,7 +22,7 @@ RequestEvent._messages will contain the raw messages from the queue.
 
 from __future__ import unicode_literals
 
-__version__ = '0.4.0'
+__version__ = '0.4.1'
 
 from . import Const  # noqa
 
